# reactive_landing_controller

./: .gitignore  README.md  setupGo1.md
landing_controller/: CMakeLists.txt  README.md  package.xml
landing_controller/controller/: landingController.py  landingManager.py  utility.py
landing_controller/controller/SLIP_dynamics/: K-test.py  slip_dynamics.cpp  slip_dynamics.h  unit_test.py
landing_controller/go1tests/: basic_example.py  send_torques.py  sensor_test.py  start_up.py  wbc.py
landing_controller/scripts/: lc_experiment.py  lc_find_limits.py  lc_find_limits_noise.py  lc_simulation.py  vhsip.py  vhsip_plot.py  wbc.py
landing_controller/settings/: __init__.py  fig_list.py  init_conds.py  plot.py  simulation.py  video.py  workspace.py
robot_control/base_controllers/: base_controller.py  params.py  quadruped_controller.py
robot_control/base_controllers/components/inverse_kinematics/: inv_kinematics_pinocchio.py
robot_control/base_controllers/utils/: common_functions.py  kin_dyn_utils.py  math_tools.py  ros_publish.py
robot_descriptions/go1_description/: CMakeLists.txt  package.xml
robot_descriptions/go1_description/config/: ros_impedance_controller.yaml
robot_descriptions/go1_description/gazebo/: gazebo.xacro  gazebo_plane.urdf.xacro
robot_descriptions/go1_description/launch/: rviz.launch  spawn.launch  upload.launch
robot_descriptions/go1_description/robots/: go1.srdf.xacro  go1.urdf.xacro
robot_descriptions/go1_description/rviz/: operator_floating.rviz
robot_descriptions/go1_description/scripts/: go0
robot_descriptions/go1_description/urdfs/: const.xacro  leg.gazebo.xacro  leg.transmission.xacro  leg.xacro
robot_hardware_interfaces/base_hardware_interface/: package.xml
robot_hardware_interfaces/go1_hardware_interface/: CMakeLists.txt  README.md  package.xml
robot_hardware_interfaces/go1_hardware_interface/go1_hal/: CMakeLists.txt  README.md
robot_hardware_interfaces/go1_hardware_interface/go1_hal/cmake/: go1halConfig.cmake.in
robot_hardware_interfaces/go1_hardware_interface/go1_hal/include/go1_hal/: go1_hal.h
robot_hardware_interfaces/go1_hardware_interface/go1_hal/src/: go1_hal.cpp  python_interface.cpp
robot_hardware_interfaces/go1_hardware_interface/go1_hal/test/: CMakeLists.txt  test_go1_hal.cpp  test_python_interface.py
robot_hardware_interfaces/go1_hardware_interface/include/go1_interface/: go1_robot_hw.hpp  go1_ros_control.hpp
robot_hardware_interfaces/go1_hardware_interface/src/: go1_robot_hw.cpp  go1_ros_control.cpp  go1_ros_node.cpp
robot_urdf/: go1.urdf
robot_urdf/generated_urdf/: go1.urdf
ros_impedance_controller/: CMakeLists.txt  package.xml
ros_impedance_controller/launch/: ros_impedance_controller_floating.launch  visualize.launch
ros_impedance_controller/worlds/: camera_fast.world  camera_slow.world  mid.world  slow.world
