<?xml version="1.0"?>
<package format="2">
  <name>go1_hardware_interface</name>
  <version>0.0.1</version>
  <description>
      Hardware Abstraction Layer for Go1 robot
  </description>
  <maintainer email="francesco.roscia@iit.it">Francesco Roscia</maintainer>
  <author>Francesco Roscia</author>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>realtime_tools</depend>
  <depend>controller_manager</depend>
  <depend>base_hardware_interface</depend>

  <test_depend>rostest</test_depend>

</package>

